Ghost 2020 + BG Fix
Added Ghost Art + fixed a problem with the bg not showing up

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: Century Gothic, Arial Narrow, sans-serif;
   background-color: #252525;
-  background-image: url("/assets/bg.png");
+  background-image: url("bg.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
